# H5edit

./: README.md  index.html  package-lock.json  package.json
src/: main.ts  serialization.ts  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: core.test.mjs  sample.html
