[package]
name = "html-text-editor"
version = "0.1.0"
description = "A local WYSIWYG text-only editor for standalone HTML files."
authors = ["Codex"]
edition = "2021"

[lib]
name = "html_text_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

